Changed scrollbar fixed legend text added favicon
Misc Changes
- Added favicon.ico to Assets/Misc

style.css changes
- Removed text-align: center from .legendspan_en and .legendspan_cn
- Added webkit-scrollbar styling

index.html changes
- Added favicon

script.js changes
- Changed changelog open/close margin-right

--- a/style.css
+++ b/style.css
@@ -19,6 +19,24 @@ body {
   user-select: none;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(#1e8dff, #3c9dfe);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #ffffff;
+  
+}
+::-webkit-scrollbar-corner {
+  background: #3c9dfe;
+}
+
 .topbanner {
   width: 100%;
   height: 140px;
@@ -535,7 +553,6 @@ button:focus {
   vertical-align: middle;
   font-size: 15px;
   min-width: 60%;
-  text-align: center;
   text-shadow: 2px 1px #00000070;
 }
 
